# -*- coding: utf-8 -*-

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "cython",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdaencore"
description = "Ensemble overlap comparison software for molecular data."
license = {file = "LICENSE" }
authors = [
    {name = "Matteo Tiberti", email = "tiberti@cancer.dk"},
    {name = "Wouter Boomsma", email = "wb@di.ku.dk"},    
    {name = "Tone Bengtsen", email = "tonebengsten@gmail.com"},
    {name = "Ian M. Kenney", email = "ikenney@asu.edu"},
    {name = "mdaencore AUTHORS"},
]
maintainers = [
    {name = "Kristoffer Enøe Johansson", email = "kristoffer.johansson@bio.ku.dk"},
    {name = "Kresten Lindorff-Larsen", email = "lindorff@bio.ku.dk"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "mdanalysis_sphinx_theme",
]

[project.urls]
source = "https://github.com/MDAnalysis/mdaencore"
documentation = "https://www.mdanalysis.org/mdaencore/"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mdaencore/tests",
]

[tool.black]
line-length = 80
extend-exclude = "versioneer.py"
